Implement TestData class further